    * [FELIX-4849] - Do not call setContentLength after calling sendRedirect
    * [FELIX-4995] - NPE when updating Apache Felix OSGi Management Console configuration without a password
    * [FELIX-5004] - Null is passed to BundleInfoProvider if plugin root is null
    * [FELIX-5031] - NPE in Web Console configuration plugin when metatype service is missing

** Improvement
    * [FELIX-5018] - [webconsole] "create factory configuration" link for config screen
    * [FELIX-5019] - [webconsole] "referer" parameter for configuration open/create link


Changes from 4.2.8 to 4.2.10
----------------------------
** Bug
    * [FELIX-4852] - Unbinding configuration does not have desired effect
    * [FELIX-4886] - Check for ConfigAdmin#listConfigurations returning null


Changes from 4.2.6 to 4.2.8
---------------------------
** Bug
    * [FELIX-3695] - When bundle filter doesn't match, the tool bars are duplicated
    * [FELIX-4800] - Bundle search in /system/console/bundles produces 405
** Improvement
    * [FELIX-3006] - Please create a logout button for the web console screen

Changes from 4.2.4 to 4.2.6
---------------------------
** Bug
    * [FELIX-4203] - ConfigAdmin plugin does not return json
    * [FELIX-4734] - Web Console RESTful API should wait for asynchonous operations until they complete 
    * [FELIX-4735] - Cannot create a new factory configuration from Web Admin Console
** Improvement
    * [FELIX-3849] - Support setting configuration binding
    * [FELIX-4007] - enable multiline inputs in Web Console Configuration
    * [FELIX-4704] - Show ranking in web console services plugin
    * [FELIX-4710] - Web Console: Display templated name hint for factory configuration entries
    * [FELIX-4737] - Provide an option to use system bundle context to get bundles/services (Support for subsystems)
    * [FELIX-4746] - Escape outputting filter parameter in service servlet
** Task
    * [FELIX-4738] - Deprecate WebConsoleUtil#keyVal

Changes from 4.2.0 to 4.2.4