@@ -161,7 +161,7 @@ public interface WebConsoleConstants
      * {@link AbstractWebConsolePlugin#renderTopNavigation(javax.servlet.http.HttpServletRequest, java.io.PrintWriter)}
      * method does.
      * <p>
-     * The type of this request attribute is <code>Map<String, String></code>.
+     * The type of this request attribute is <code>Map&lt;String, String&gt;</code>.
      *
      * @since 2.0.0
      */
